@@ -8,6 +8,7 @@
 - Added hash-mode 18500 sha1(md5(md5($pass)))
 - Added hash-mode 18600 (Open Document Format (ODF) 1.1 (SHA-1, Blowfish))
 - Added hash-mode 18700 Java Object hashCode()
+- Added hash-mode 18800 Blockchain, My Wallet, Second Password (SHA256)
 - Added hash-mode 18900 Android Backup
 
 ##
